0032949: Modeling Algorithms - Infinite loop in ShapeUpgrade_UnifySameDomain

RemoveEdgeFromMap() now returns now many entries it has removed, allowing RelocatePCurvesToNewUorigin() to detect if the edge map no longer has valid edges to advance through, and terminate if so preventing an infinite loop